Eslint and airbnb fix (#7)
* add eslint and prettier config files

* Add styling dev dependencies

* Ignore rule for react/prop-types

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,1 +1,13 @@
-{ "extends": "airbnb" }
+{
+  "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
+  "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
+    "comma-dangle": ["error", "never"],
+    "react/prop-types": "ignore"
+  }
+}
