--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "plugins": ["jest"],
   "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
   "rules": {
     "react/jsx-filename-extension": [
@@ -8,6 +9,14 @@
       }
     ],
     "comma-dangle": ["error", "never"],
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error"
+  },
+  "env": {
+    "jest/globals": true
   }
 }
