--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -17,6 +17,7 @@
     "jest/valid-expect": "error"
   },
   "env": {
-    "jest/globals": true
+    "jest/globals": true,
+    "browser": true
   }
 }
