--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "prettier": "^2.0.1"
+    "prettier": "^2.0.1",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
