--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.13.1",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -19,7 +20,8 @@
     "react-share": "^4.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
